overflow hidden to fix mobile issue with arrows

--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,7 @@
 .features-container {
     padding: 7.5rem 2rem;
     position: relative;
+    overflow-x: hidden;
 }
 .features-container .feature {
     display: flex;
@@ -80,13 +81,19 @@
     position: absolute;
     width: 100%;
     height: 100%;
+}
+.feature-arrow-container-telemetry svg {
+    position: relative;
     top: 185px;
-    left: 35px;
+    left: 30px;
 }
 .feature .feature-arrow-container-city {
     position: absolute;
     width: 100%;
     height: 100%;
+}
+.feature-arrow-container-city svg {
+    position: relative;
     top: 20px;
     right: 210px;
 }
@@ -94,6 +101,9 @@
     position: absolute;
     width: 100%;
     height: 100%;
+}
+.feature-arrow-container-payments svg {
+    position: relative;
     top: -10px;
     left: 120px;
 }
